# expedition-33-rl-agent

./: .gitignore  README.md  TESTING.md  main.py  overlay_ui.py  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.claude/skills/coding-planner/: SKILL.md
.github/workflows/: ci.yml
calibration/: __init__.py  app.py  collector.py  config.py  loader.py  logger.py  matcher.py  roi_overlay.py  ue4ss_config.py
calibration/analysis/: core.py  entry.py
calibration/matcher/: pixel.py  sift.py
docs/: NEXT_STEPS.md  PROJECT_STRUCTURE.md  USAGE.md
environment/: __init__.py  actions.py  clip_env.py  controls.py  gym_env.py  instance.py  state_buffer.py  ue4ss_env.py  ue4ss_reader.py
il/: dataset.py  diffusion_policy.py  gail.py
rl/: __init__.py  policy.py  train.py  train_sac.py
tests/: conftest.py  test_actions.py  test_auto_label.py  test_calibration_logger.py  test_clip_env.py  test_clip_vision.py  test_collector.py  test_composite_engine.py  test_dataset_status.py  test_demo_recorder.py  test_diffusion_policy.py  test_dino_vision.py  test_feature_engines.py  test_gail.py  test_gym_env.py  test_log_analyzer.py  test_pixel_engine.py  test_rl.py  test_roi_overlay.py  test_sac.py  test_state_buffer.py  test_ue4ss_env.py  test_vision_benchmark.py  test_vision_engine.py  test_vision_registry.py
tools/: auto_label.py  dataset_status.py  demo_recorder.py  train.py  vision_benchmark.py
vision/: __init__.py  engine.py  registry.py
vision/engines/: __init__.py  _utils.py  clip.py  composite.py  dino.py  orb.py  pixel.py  sift.py  yolo.py
(+8 files in other folders)
