[project]
name = "expedition-33-rl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium",
    "mss==10.1.0",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "pandas==3.0.0",
    "pywin32==311 ; sys_platform == 'win32'",
    "ultralytics",
    "pynput",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax for target Python version)
]
ignore = [
    "E501",  # line too long — ruff format handles this; don't fail CI on it
]
